Remove unused features from register generation

--- a/trunk/docs/registers/Makefile
+++ b/trunk/docs/registers/Makefile
@@ -1,4 +1,4 @@
-../../src/build/registers/reg_crm.h: CRM.xls
+../../src/build/registers/reg_crm.h: CRM.xls Makefile 
 	mkdir -p $(dir $@)
 	python ../../tools/reg_xls2h/reg_xls2h.py --short $< "CRM_" 0x80003000 $@
 
