Independent makefiles from eclipse

--- a/trunk/.project
+++ b/trunk/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>mc13224-louis</name>
+	<name>open-mc13224v</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -36,11 +36,11 @@
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.buildLocation</key>
-					<value>${workspace_loc:/mc13224-louis/Release}</value>
+					<value>${project_loc}/scripts/build</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.cleanBuildTarget</key>
-					<value>clean</value>
+					<value>nuke</value>
 				</dictionary>
 				<dictionary>
 					<key>org.eclipse.cdt.make.core.contents</key>
